# github-actions-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-requirements.txt  launch.json  pyproject.toml  requirements.txt  settings.json
.github/workflows/: blank.yml
src/: __main__.py  calculator.py
tests/: test_calculator.py
